clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_var_assign/borrow_var_assign.cbs
// RUN: %clang_cc1 -verify %s

struct S {
  int a;
};

void use_mut(int* _Borrow p);
void use_immut(const int* _Borrow p);
T* owned safe_malloc<T>(T value);
void free_owned<T>(T* owned p);
void free(void*);

void test1() {
  int local = 42;
  int* _Borrow p = &_Mut local; // expected-note {{`local` is borrowed here}}
  int* _Borrow q = p;
  local = 43; // expected-error {{cannot assign to `local` because it is borrowed}}
  use_mut(q);
}

void test2() {
  int* owned oriPtr = safe_malloc<int>(0);
  int* _Borrow p1 = &_Mut *oriPtr; // expected-note {{`*oriPtr` is borrowed here}}
  int* _Borrow p2 = p1;
  free_owned<int>(oriPtr); // expected-error {{cannot move out of `oriPtr` because it is borrowed}}
  use_mut(p2);
}

void test3() {
  int local = 42;
  int* _Borrow p = &_Mut local; // expected-note {{first mut borrow occurs here}}
                              // expected-note@-1 {{`local` is borrowed here}}
  int* _Borrow q = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
  q = p;
  local = 43; // expected-error {{cannot assign to `local` because it is borrowed}}
  use_mut(q);
}

void test4(int* oriPtr) {
  int* _Borrow p1 = &_Mut *oriPtr; // expected-note {{first mut borrow occurs here}}
                                 // expected-note@-1 {{`*oriPtr` is borrowed here}}
  int* _Borrow p2 = &_Mut *oriPtr; // expected-error {{cannot borrow `*oriPtr` as mutable more than once at a time}}
  free(oriPtr); // expected-error {{cannot use `oriPtr` because it was mutably borrowed}}
  use_mut(p1);
}

void test5() {
  int local = 42;
  const int* _Borrow p = &_Const local; // expected-note {{`local` is borrowed here}}
  const int* _Borrow q = p;
  local = 43; // expected-error {{cannot assign to `local` because it is borrowed}}
  use_immut(q);
}

void test6() {
  int arr[5];
  int* _Borrow p = &_Mut arr[0]; // expected-note {{`arr` is borrowed here}}
  int* _Borrow q = p;
  int temp = arr[2]; // expected-error {{cannot use `arr` because it was mutably borrowed}}
  use_mut(q);
}

void test7() {
  struct S s = { .a = 5 };
  struct S* _Borrow p1 = &_Mut s; // expected-note {{`s` is borrowed here}}
  struct S* _Borrow p2 = p1;
  struct S temp = s; // expected-error {{cannot use `s` because it was mutably borrowed}}
  struct S s2 = *p2;
}